<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.employeemanagementtool.viewmodels.SearchEmployeeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SearchEmployeeFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/employee_first_name"
            android:hint="@string/employee_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/employee_last_name"
            android:hint="@string/employee_last_name"
            android:layout_below="@+id/employee_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/employee_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/employee_id"
            android:layout_alignParentRight="true"/>
        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:layout_below="@id/employee_first_name"
            android:layout_alignParentRight="true"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler_view"
            android:layout_below="@+id/employee_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/employee_item"/>

    </RelativeLayout>
</layout>